snitch/css/out.css
/**
 * Out area geometry
 */
 #out {
 	height: 96vh;
	padding: 1em;
	padding-top: 0;
 	overflow-y: scroll;
 }
 #out [data-id] {
	 display: none;
 }
 #out .active {
	 display: block;
 }

